The blue branch was done.

--- a/README
+++ b/README
@@ -5,3 +5,6 @@ Creator: matt.gauger@gmail.com
 Modified: Geo
 
 License: http://creativecommons.org/licenses/by-nc-sa/3.0/us/
+
+This is BLUE branch, George added this after checking ot BLUE.
+Wow.
